[gd_scene load_steps=18 format=3 uid="uid://db4ukbgv807ke"]

[ext_resource type="Texture2D" uid="uid://ccjcl4kaba4d6" path="res://Images/BarrelAndExploding/Red Oil Barrel.png" id="1_pbg3n"]
[ext_resource type="Script" uid="uid://caryqehxpma2w" path="res://Scripts/explosive_barrel.gd" id="2_5otu7"]
[ext_resource type="Texture2D" uid="uid://dvcuh0wifqerv" path="res://Images/BarrelAndExploding/Exploding Red Oil Barrel.png" id="3_g7nke"]
[ext_resource type="PackedScene" uid="uid://5b2852y4fo4t" path="res://Prefabs/fire.tscn" id="4_60op6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_faabn"]
atlas = ExtResource("3_g7nke")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfyb5"]
atlas = ExtResource("3_g7nke")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yuy3s"]
atlas = ExtResource("3_g7nke")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ai70"]
atlas = ExtResource("3_g7nke")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n71hf"]
atlas = ExtResource("3_g7nke")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hmra"]
atlas = ExtResource("3_g7nke")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb55o"]
atlas = ExtResource("3_g7nke")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p26vm"]
atlas = ExtResource("3_g7nke")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yckrg"]
atlas = ExtResource("3_g7nke")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2tw8"]
atlas = ExtResource("3_g7nke")
region = Rect2(176, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_7l5mb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_faabn")
}],
"loop": false,
"name": &"Default",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfyb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yuy3s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ai70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n71hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hmra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb55o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p26vm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yckrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2tw8")
}],
"loop": false,
"name": &"Explotion",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jekfe"]
size = Vector2(12, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_3ikgg"]
radius = 24.0

[node name="ExplosiveBarrel" type="Node2D"]
script = ExtResource("2_5otu7")

[node name="Barrel" type="Sprite2D" parent="."]
scale = Vector2(0.75, 1)
texture = ExtResource("1_pbg3n")

[node name="ExplotionAnim" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_7l5mb")
animation = &"Default"
autoplay = "Default"

[node name="Fire" parent="." instance=ExtResource("4_60op6")]
visible = false
position = Vector2(0, -19)
scale = Vector2(0.75, 0.75)
color = 5
can_damage = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="SCollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_jekfe")

[node name="Area2D" type="Area2D" parent="."]

[node name="ACollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_jekfe")

[node name="Explotion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Explotion"]
scale = Vector2(1e-05, 1e-05)
shape = SubResource("CircleShape2D_3ikgg")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
